[FE] 議고삙由?251127/api?곕룞 諛??移섏쨲 ?곸슜