@@ -46,13 +46,11 @@ public class EventService {
         // TTS 생성 (Base64 문자열 반환)
         String audioUrl = ttsService.generateTtsFromText(descriptionText);
 
-        AIScriptResponseDTO dto = new AIScriptResponseDTO(
+         return new AIScriptResponseDTO(
                 description.getUserMedicine().getUmno(),
                 descriptionText,
                 audioUrl
         );
-        
-        return dto;
     }
 
     @Transactional
@@ -128,10 +126,12 @@ public class EventService {
                 .filter(med -> {
                     CycleEntity cycle = cycleMap.get(med.getUmno());
                     if (cycle == null) return false;
-                    LocalDate start = cycle.getStartDate();
-                    LocalDate end = cycle.getEndDate();
-                    return (today.isEqual(start) || today.isAfter(start)) &&
-                            (today.isEqual(end) || today.isBefore(end));
+
+                    // 아직 시작일 전이면 제외
+                    if (today.isBefore(cycle.getStartDate())) return false;
+
+                    // 횟수가 남아있으면 포함
+                    return cycle.getCurCycle() < cycle.getTotalCycle();
                 })
                 .toList();
 
@@ -143,6 +143,11 @@ public class EventService {
 
         List<AlarmTimeEntity> alarmTimes = alarmTimeRepository.findAllByUserMedicine_UmnoIn(activeUmnoList);
 
+        Map<Long, DescriptionEntity> descriptionMap =
+                descriptionRepository.findAllByUserMedicine_UmnoInAndEventName_Enno(activeUmnoList, 1L)
+                        .stream()
+                        .collect(Collectors.toMap(d -> d.getUserMedicine().getUmno(), d -> d, (a, b) -> a));
+
         EventNameEntity alarmEventName = eventNameRepository.findById(1L)
                 .orElseThrow(() -> new RuntimeException("enno=1인 '알림' 이벤트명을 찾을 수 없습니다.")); // (배치 실패 처리)
 
@@ -151,32 +156,18 @@ public class EventService {
                 .collect(Collectors.groupingBy(q -> q.getUserMedicine().getUmno()));
 
         Random random = new Random();
-        Map<Long, DescriptionEntity> descriptionMap = new HashMap<>();
-
-        for (UserMedicineEntity med : activeMedsToday) {
-
-            // 동적 설명 생성
-            String category = med.getCategory();
-            String dynamicDescription = String.format("%s 먹을 시간이에요! 아래 퀴즈를 풀어주세요", category);
-
-            DescriptionEntity newDescription = DescriptionEntity.builder()
-                    .userMedicine(med)
-                    .eventName(alarmEventName)
-                    .description(dynamicDescription)
-                    .createdAt(LocalDateTime.now())
-                    .build();
-            DescriptionEntity savedDescription = descriptionRepository.save(newDescription);
-
-            // Map에 저장 (Key: umno, Value: 저장된 엔티티)
-            descriptionMap.put(med.getUmno(), savedDescription);
-        }
 
         Map<Long, Integer> eventCountPerUmno = new HashMap<>();
 
         for (AlarmTimeEntity alarm : alarmTimes) {
             Long currentUmno = alarm.getUserMedicine().getUmno();
+            CycleEntity cycle = cycleMap.get(currentUmno);
 
-            // 퀴즈 랜덤 선택
+            // 이미 총 횟수를 다 채웠다면 이벤트 생성 스킵
+            if (cycle.getCurCycle() >= cycle.getTotalCycle()) {
+                continue;
+            }
+
             QuizEntity selectedQuiz = null;
             List<QuizEntity> quizzesForThisUmno = quizMap.get(currentUmno);
             if (quizzesForThisUmno != null && !quizzesForThisUmno.isEmpty()) {
@@ -194,18 +185,20 @@ public class EventService {
                     .build();
 
             newEvents.add(newEvent);
+            cycle.setCurCycle(cycle.getCurCycle() + 1);
 
+            // 카운트 맵 업데이트
             eventCountPerUmno.put(currentUmno, eventCountPerUmno.getOrDefault(currentUmno, 0) + 1);
         }
 
         for (Map.Entry<Long, Integer> entry : eventCountPerUmno.entrySet()) {
             Long umno = entry.getKey();
-            Integer newEventCount = entry.getValue(); // 오늘 생성된 이벤트 갯수
-
             CycleEntity cycleToUpdate = cycleMap.get(umno); // (N+1 방지) 이미 로드한 객체 재사용
+
             if (cycleToUpdate != null) {
-                int currentCycle = (cycleToUpdate.getCurCycle() != null) ? cycleToUpdate.getCurCycle() : 0;
-                cycleToUpdate.setCurCycle(currentCycle + newEventCount);
+                if (today.isAfter(cycleToUpdate.getEndDate())) {
+                    cycleToUpdate.setEndDate(today);
+                }
             }
         }
 
@@ -242,7 +235,7 @@ public class EventService {
      * [공통 헬퍼] 1. EventEntity 목록을 받아서 최종 DTO(FCM/API 응답용)로 만듦
      */
     private EventItemResponseDTO buildEventResponseDTO(Long uno, List<EventEntity> events) {
-        // (N+1 방지) 퀴즈 옵션 미리 조회 (기존과 동일)
+        // (N+1 방지) 퀴즈 옵션 미리 조회
         List<Long> qnoList = events.stream()
                 .map(EventEntity::getQuiz)
                 .filter(Objects::nonNull)
@@ -274,7 +267,7 @@ public class EventService {
                 List<String> correctAnswers = options.stream()
                         .filter(QuizOptionEntity::getIsCorrect)
                         .map(QuizOptionEntity::getContent)
-                        .collect(Collectors.toList());
+                        .toList();
 
                 // 오답 리스트
                 List<String> wrongAnswers = options.stream()
@@ -293,11 +286,26 @@ public class EventService {
                 }
             }
 
+            Long umno = event.getUserMedicine().getUmno();
+            DescriptionEntity description = descriptionRepository.findTop1ByUserMedicine_UmnoAndEventName_Enno(umno, 1l); // alarm -> enno : 1
+
+            if (description == null) {
+                throw new IllegalArgumentException("해당 복약 정보(umno=" + umno + ")와 이벤트(enno=1)에 대한 description을 찾을 수 없습니다.");
+            }
+
+            String descriptionText = description.getDescription();
+            if (descriptionText == null || descriptionText.trim().isEmpty()) {
+                throw new IllegalArgumentException("description이 비어있습니다.");
+            }
+
+            // TTS 생성 (Base64 문자열 반환)
+            String audioUrl = ttsService.generateTtsFromText(descriptionText);
+
             return new EventItemDTO(
                     event.getEno(), med.getUmno(), event.getEventName().getName(), time,
                     med.getHospital(), med.getCategory(),
                     (event.getDescription() != null) ? event.getDescription().getDescription() : "",
-                    question, candidate
+                    audioUrl, question, candidate
             );
         }).collect(Collectors.toList());
 
